--- a/changelogs/unreleased/24629.yml
+++ b/changelogs/unreleased/24629.yml
@@ -1,5 +1,5 @@
 ---
-title: Highlight currently focused/viewed file in file tree
+title: Highlight un-focused/un-viewed file's in file tree
 merge_request: 27937
 author:
 type: changed
