--- a/spec/lib/gitlab/import_export/all_models.yml
+++ b/spec/lib/gitlab/import_export/all_models.yml
@@ -448,6 +448,8 @@ project:
 - feature_usage
 - approval_rules
 - approval_merge_request_rules
+- approval_merge_request_rules_sources
+- approval_project_rules
 - approvers
 - approver_users
 - pages_domains
