--- a/changelogs/unreleased/213571-migrate-lm-to-ls-artifacts.yml
+++ b/changelogs/unreleased/213571-migrate-lm-to-ls-artifacts.yml
@@ -1,5 +1,5 @@
 ---
 title: Migrate license_management artifacts to license_scanning type
-merge_request:
+merge_request: 36817
 author:
 type: changed
